--- a/demo/游戏作品/css/canvas.css
+++ b/demo/游戏作品/css/canvas.css
@@ -4,12 +4,75 @@ body {
 #wrap {
   width: 1200px;
   height: 800px;
-  margin: 50px auto 0;
+  margin: 20px auto 0;
   position: relative;
+  overflow: hidden;
+}
+#wrap #main {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 3;
+  overflow: hidden;
+}
+#wrap #main video {
+  position: absolute;
+  top: 0;
+  left: -220px;
+  background: #000;
+}
+#wrap #main #logo {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+}
+#wrap #main #logo h1 {
+  width: 300px;
+  height: 0px;
+  font-size: 0;
+  padding-top: 150px;
+  background: url(../img/title.png) no-repeat;
+}
+#wrap #main #logo span {
+  letter-spacing: -1px;
+  display: block;
+  position: relative;
+  top: -20px;
+  text-indent: 100px;
+  width: 300px;
+  font: italic bold 15px/20px arial, sans-serif;
+  text-shadow: 3px 3px 7px black;
+  color: #fff;
+}
+#wrap #main #list {
+  position: absolute;
+  right: 50px;
+  top: 80px;
+}
+#wrap #main #list .lis {
+  width: 200px;
+  height: 80px;
+  margin: 30px 0;
+  background: url(../img/homepage/lis-bg.png) no-repeat;
+  background-size: 100% 100%;
+  text-align: center;
+  font: 20px/80px "微软雅黑";
+}
+#wrap #canvas {
   background: url(../img/canvas/1.png) no-repeat;
   background-size: 100% 100%;
+  position: absolute;
+  left: 0;
+  top: 0px;
+  z-index: 1;
 }
 #wrap #talent_wrap {
+  position: absolute;
+  left: 0;
+  top: 0px;
+  z-index: 1;
   width: 1200px;
   height: 800px;
   background: url(../img/canvas/talent/talent-bg.png) no-repeat center center;
@@ -21,6 +84,14 @@ body {
   height: 600px;
   left: 320px;
   top: 130px;
+}
+#wrap #talent_wrap #content .sp {
+  position: absolute;
+  width: 150px;
+  height: 40px;
+  font: 20px/40px "微软雅黑";
+  right: 50px;
+  top: 10px;
 }
 #wrap #talent_wrap #content .text {
   position: absolute;
