--- a/demo/游戏作品/css/canvas.css
+++ b/demo/游戏作品/css/canvas.css
@@ -228,3 +228,12 @@ body {
   left: 446px;
   top: 342px;
 }
+#wrap #gameOver {
+  position: relative;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+  background: url(../img/game_over_bg2.png) url(../img/game_over_bg.png) no-repeat;
+  background-position: 0 0,center 120px ;
+  background-size: 100% 100%,500px 500px;
+}
