--- a/demo/游戏作品/css/canvas.less
+++ b/demo/游戏作品/css/canvas.less
@@ -227,4 +227,13 @@ body{
             }
         }
     }
+    #gameOver{    //游戏结束div
+        position: relative;
+        z-index: 5;
+        width: 100%;
+        height: 100%;
+        background:url(../img/game_over_bg2.png) url(../img/game_over_bg.png) no-repeat;
+        background-position: 0 0,center 120px ;
+        background-size:100% 100%,500px 500px;
+    }
 }
